CS101/ejercicios/compiling_error.txt
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:7:52: error: use of undeclared identifier 'n'
    printf("Indica el valor de N : "); scanf("%d",&n);
                                                   ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:8:5: error: use of undeclared identifier 'f'
    f=1;
    ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:9: error: use of undeclared identifier 'i'
    for(i=1;i<=n;i++) f=f*i;
        ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:13: error: use of undeclared identifier 'i'
    for(i=1;i<=n;i++) f=f*i;
            ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:16: error: use of undeclared identifier 'n'
    for(i=1;i<=n;i++) f=f*i;
               ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:18: error: use of undeclared identifier 'i'
    for(i=1;i<=n;i++) f=f*i;
                 ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:23: error: use of undeclared identifier 'f'
    for(i=1;i<=n;i++) f=f*i;
                      ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:25: error: use of undeclared identifier 'f'
    for(i=1;i<=n;i++) f=f*i;
                        ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:9:27: error: use of undeclared identifier 'i'
    for(i=1;i<=n;i++) f=f*i;
                          ^
/Users/macbookpro/Documents/CS/CS101/ejercicios/test1.c:10:35: error: use of undeclared identifier 'f'
    printf("El resultado es : %d",f);
                                  ^
10 errors generated.
